<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (C) 2018 DBSoftwares - Dieter Blancke
  ~  *
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~  *
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~  *
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.dieterblancke.bungeeutilisalsx</groupId>
    <artifactId>BungeeUtilisalsX</artifactId>
    <packaging>pom</packaging>
    <version>2.1.2</version>

    <modules>
        <module>common</module>
        <module>bungee</module>
        <module>spigot</module>
        <module>velocity</module>
        <module>webapi</module>
    </modules>

    <developers>
        <developer>
            <id>didjee2</id>
        </developer>
    </developers>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>dieterblancke</id>
            <url>https://repo.dieterblancke.xyz/artifactory/dieterblancke-public/</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>dieterblancke</id>
            <url>https://repo.dieterblancke.xyz/artifactory/dieterblancke-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.lettuce</groupId>
            <artifactId>lettuce-core</artifactId>
            <version>6.0.2.RELEASE</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.metrics</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.dbsoftwares.configuration</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.configuration</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.mariadb.jdbc</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.mariadb.jdbc</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.postgresql</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.postgresql</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.mongodb</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.com.mongodb</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.mysql</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.com.mysql</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.com.zaxxer.hikari</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.lettuce.core</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.io.lettuce.core</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>reactor.core</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.reactor.core</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>reactor.adapter</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.reactor.adapter
                            </shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>reactor.util</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.reactor.util</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.reactivestreams</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.reactivestreams
                            </shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.mozilla</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.mozilla</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>de.christophkraemer.rhino</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.de.christophkraemer.rhino
                            </shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons.pool2</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.apache.commons.pool2
                            </shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.jsoup</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.jsoup</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.rabbitmq</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.com.rabbitmq</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>me.lucko.jarrelocator</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.me.lucko.jarrelocator
                            </shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.github.karlatemp.unsafeaccessor</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.io.github.karlatemp.unsafeaccessor</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.objectweb.asm</pattern>
                            <shadedPattern>be.dieterblancke.bungeeutilisalsx.internal.org.objectweb.asm</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>